delete duplicated files

--- a/app_client/index.html
+++ b/app_client/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="app.css">
 	<script src="bower_components/angular/angular.min.js"></script>
 	<script src="bower_components/angular-ui-tinymce/dist/tinymce.min.js"></script>
-	
+
 	<script src="bower_components/angular-route/angular-route.min.js"></script>
 	<script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 	<script src="bower_components/angular-i18n/angular-locale_zh-hans-cn.js"></script>
@@ -23,6 +23,7 @@
 	<script src="services/authentication.service.client.js"></script>
 	<script src="directives/navigation.directive.js"></script>
 	<title>ANSON LEE</title>
+	<!-- <base href="/" target="_blank"> -->
 </head>
 <body>
 	<navigation></navigation>
