--- a/app_client/index.html
+++ b/app_client/index.html
@@ -6,22 +6,21 @@
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="app.css">
 	<script src="bower_components/angular/angular.min.js"></script>
-	<script src="bower_components/angular-ui-tinymce/dist/tinymce.min.js"></script>
-
 	<script src="bower_components/angular-route/angular-route.min.js"></script>
 	<script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 	<script src="bower_components/angular-i18n/angular-locale_zh-hans-cn.js"></script>
 	<script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
 	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-	<script src="bower_components/tinymce/tinymce.min.js"></script>
 	<script src="app.js"></script>
 	<script src="controllers/home.controller.client.js"></script>
 	<script src="controllers/article.controller.client.js"></script>
 	<script src="controllers/comment.controller.client.js"></script>
-	<script src="controllers/TinyMceController.js"></script>
+	<script src="controllers/registration.controller.client.js"></script>
+	<script src="controllers/login.controller.client.js"></script>
 	<script src="services/article.service.client.js"></script>
 	<script src="services/authentication.service.client.js"></script>
 	<script src="directives/navigation.directive.js"></script>
+	<script src="directives/navigation.controller.js"></script>
 	<title>ANSON LEE</title>
 	<!-- <base href="/" target="_blank"> -->
 </head>
