--- a/app_client/directives/navigation.template.html
+++ b/app_client/directives/navigation.template.html
@@ -1,12 +1,21 @@
+<style media="screen">
+	div.container {
+		line-height: 50px;
+	}
+</style>
 <div class="navbar navbar-default navbar-fixed-top">
 	<div class="container">
-		<p class="header text-center"><a href="javascript:0;">ANSON LEE</a></p>
+		<p class="header pull-left"><a href="javascript:0;">ANSON LEE</a></p>
 		<p class="links text-center">
-			<a href="https://github.com/">Blog</a>
-			<a href="https://github.com/">Github</a>
-			<a href="#/login" ng-show="!isLoggedIn">Sign in</a>
-			<a href="javascript:0;" ng-show="isLoggedIn">{{currentUser.name}}</a>
-			<a href="javascript:0;" ng-show="isLoggedIn" ng-click="logout()">Log out</a>
+			<span class="pull-right text-primary" ng-if="!isLoggedIn">
+				<a href="#/register?page={{currentPath}}">注册</a> |
+				<a href="#/login?page={{currentPath}}">登陆</a>
+			</span>
+			<span class="pull-right text-success" ng-if="isLoggedIn">
+				<a href="javascript:0;">{{currentUser.name}}</a>
+				<a href="#/admin" ng-if='isAdmin'>管理员入口</a>
+				<a href="javascript:0;" class="text-danger" ng-click="logout()">退出</a>
+			</span>
 		</p>
 	</div>
 </div>
