--- a/public/spa_client/index.html
+++ b/public/spa_client/index.html
@@ -13,7 +13,9 @@
 	<script src="bower_components/angular-i18n/angular-locale_zh-hans-cn.js"></script>
 	<script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
 	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-	<!-- <script src="spa_client/app.js"></script>
+
+
+	<script src="spa_client/app.js"></script>
 	<script src="spa_client/controllers/home.controller.client.js"></script>
 	<script src="spa_client/controllers/article.controller.client.js"></script>
 	<script src="spa_client/controllers/comment.controller.client.js"></script>
@@ -24,8 +26,10 @@
 	<script src="spa_client/directives/navigation.directive.js"></script>
 	<script src="spa_client/directives/navigation.controller.js"></script>
 	<script src="spa_client/directives/progressiveImg.js"></script>
-	<script src="spa_client/filters/addHtmlLineBreaks.js"></script> -->
-	<script src="js/app.min.js" charset="utf-8"></script>
+	<script src="spa_client/filters/addHtmlLineBreaks.js"></script>
+
+
+	<!-- <script src="js/app.min.js" charset="utf-8"></script> -->
 	<script src="js/starBlur.min.js" charset="utf-8"></script>
 	<title>ANSON LEE</title>
 
